// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputRenderer — T-0003-089: snapshot labelled + placeholder snapshot: TextInput labelled + placeholder (unfocused) 1`] = `
<View>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "400",
        },
        {
          "color": "#5e6470",
        },
      ]
    }
  >
    Full Name
  </Text>
  <TextInput
    accessibilityLabel="Full Name"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Enter your full name"
    placeholderTextColor="#5e6470"
    style={
      [
        {
          "borderWidth": 0.5,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        },
        {
          "borderColor": "#e6e8eb",
          "borderRadius": 10,
          "color": "#0a0a0b",
          "fontSize": 16,
          "fontWeight": "400",
        },
      ]
    }
    value=""
  />
</View>
`;

exports[`TextInputRenderer — T-0003-090: snapshot multiline snapshot: TextInput multiline=true with placeholder 1`] = `
<View>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "400",
        },
        {
          "color": "#5e6470",
        },
      ]
    }
  >
    Bio
  </Text>
  <TextInput
    accessibilityLabel="Bio"
    multiline={true}
    numberOfLines={5}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Tell us about yourself"
    placeholderTextColor="#5e6470"
    scrollEnabled={true}
    style={
      [
        {
          "borderWidth": 0.5,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        },
        {
          "borderColor": "#e6e8eb",
          "borderRadius": 10,
          "color": "#0a0a0b",
          "fontSize": 16,
          "fontWeight": "400",
        },
      ]
    }
    value=""
  />
</View>
`;

exports[`TextInputRenderer — T-0003-090b: snapshot focused state snapshot: TextInput in focused state (border = palette.primary) 1`] = `
{
  "borderColor": "#4f46e5",
  "borderRadius": 10,
  "borderWidth": 0.5,
  "color": "#0a0a0b",
  "fontSize": 16,
  "fontWeight": "400",
  "paddingHorizontal": 14,
  "paddingVertical": 12,
}
`;
